setting attrbiute baudrate not speed